install devise. dashboard requires auth

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,8 @@
 
   <body>
     <%= render 'shared/navbar' %>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <%= render 'shared/flash' %>
+    <main class="container mx-auto mt-28 px-5 flex flex-col">
       <%= yield %>
     </main>
   </body>
