--- a/app/views/account_users/_account_user.html.erb
+++ b/app/views/account_users/_account_user.html.erb
@@ -1,12 +1,12 @@
 <div id="<%= dom_id account_user %>">
   <p class="my-5">
     <strong class="block font-medium mb-1">Account:</strong>
-    <%= account_user.account_id %>
+    <%= account_user.account.name %>
   </p>
 
   <p class="my-5">
     <strong class="block font-medium mb-1">User:</strong>
-    <%= account_user.user_id %>
+    <%= account_user.user.email %>
   </p>
 
   <p class="my-5">
