--- a/app/views/account_users/index.html.erb
+++ b/app/views/account_users/index.html.erb
@@ -5,6 +5,11 @@
 
   <% content_for :title, "Account users" %>
 
+  <div class="flex justify-between items-center">
+    <h1 class="font-bold text-4xl">Account users</h1>
+    <%= link_to "New account user", new_account_account_user_path(@current_account), class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+  </div>
+
   <div id="account_users" class="min-w-full">
     <% @account_users.each do |account_user| %>
       <%= render account_user %>
