display current_account.name in navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,15 +1,25 @@
-<nav>
-  <%= link_to 'Home', root_path %>
-  <%= link_to 'Dashboard', dashboard_path %>
-  <%= link_to 'Pricing', pricing_path %>
-  <%= link_to 'Terms', terms_path %>
-  <%= link_to 'Privacy', privacy_path %>
-  <% if signed_in? %>
-    <%= link_to 'Accounts', accounts_path %>
-    <%= link_to current_user.email, edit_user_registration_path %>
-    <%= button_to "Log out", destroy_user_session_path, method: :delete %>
-  <% else %>
-    <%= link_to "Log in", new_user_session_path %>
-    <%= link_to "Register", new_user_registration_path %>
-  <% end %>
+<nav class="flex justify-between">
+  <div>
+    <%= link_to 'Home', root_path %>
+    <%= link_to 'Dashboard', dashboard_path %>
+    <%= link_to 'Pricing', pricing_path %>
+    <%= link_to 'Terms', terms_path %>
+    <%= link_to 'Privacy', privacy_path %>
+  </div>
+
+  <div>
+    <%= @account&.name %>
+  </div>
+
+  <%# auth %>
+  <div>
+    <% if signed_in? %>
+      <%= link_to 'Accounts', accounts_path %>
+      <%= link_to current_user.email, edit_user_registration_path %>
+      <%= button_to "Log out", destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to "Log in", new_user_session_path %>
+      <%= link_to "Register", new_user_registration_path %>
+    <% end %>
+  </div>
 </nav>
