--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
   <body>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flash' %>
-    <main class="container mx-auto mt-28 px-5 flex flex-col">
+    <main class="p-4">
       <%= yield %>
     </main>
   </body>
