--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -11,3 +11,19 @@
 }
 
 */
+
+.btn {
+  @apply inline-block px-4 py-2 rounded-md space-x-1 font-semibold text-sm transition-colors ease-in-out duration-300
+}
+
+.btn-primary {
+  @apply bg-blue-500 text-white focus:bg-blue-600 hover:bg-blue-600;
+}
+
+.btn-secondary {
+  @apply bg-gray-300 text-gray-800 focus:bg-gray-400 hover:bg-gray-400;
+}
+
+.btn-danger {
+  @apply bg-red-500 text-white focus:bg-red-600 hover:bg-red-600;
+}
