--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -3,6 +3,6 @@
 
   <%= render "form", account: @account %>
 
-  <%= link_to "Show this account", @account, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-  <%= link_to "Back to accounts", accounts_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%= link_to "Show this account", @account, class: "btn btn-secondary" %>
+  <%= link_to "Back to accounts", accounts_path, class: "btn btn-secondary" %>
 </div>
