--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -3,14 +3,14 @@
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Accounts</h1>
-    <%= link_to "New account", new_account_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <%= link_to "New account", new_account_path, class: "btn btn-primary" %>
   </div>
 
   <div id="accounts" class="min-w-full">
     <% @accounts.each do |account| %>
       <%= render account %>
       <p>
-        <%= link_to "Show this account", account, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+        <%= link_to "Show this account", account, class: "btn btn-secondary" %>
       </p>
     <% end %>
   </div>
