--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -3,5 +3,5 @@
 
   <%= render "form", account: @account %>
 
-  <%= link_to "Back to accounts", accounts_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%= link_to "Back to accounts", accounts_path, class: "btn btn-secondary" %>
 </div>
