--- a/app/views/accounts/account_users/new.html.erb
+++ b/app/views/accounts/account_users/new.html.erb
@@ -1,6 +1,16 @@
-<h1>Invite Members</h1>
+<div class="mx-auto md:w-2/3 w-full">
+  <h1 class="font-bold text-4xl">Invite user</h1>
 
-<%= form_with url: account_account_users_path do |form| %>
-  <%= form.email_field :email, placeholder: 'Email' %>
-  <%= form.submit 'Invite' %>
-<% end %>
+  <%= form_with url: account_account_users_path, class: "contents" do |form| %>
+    <div class="my-5">
+      <%= form.label :email %>
+      <%= form.email_field :email, placeholder: 'Email', class: 'form-input' %>
+    </div>
+
+    <div class="inline">
+      <%= form.submit 'Invite', class: 'btn btn-primary' %>
+    </div>
+  <% end %>
+
+  <%= link_to "Cancel", accounts_path, class: "btn btn-secondary" %>
+</div>
