navbar - click account to show account#show

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,10 +10,10 @@
   </div>
 
   <% if @account.present? %>
-    <div class="flex items-center gap-2">
+    <%= link_to account_path(@account), class: 'flex items-center gap-2' do %>
       <%= image_tag @account.logo, class: 'rounded-full size-8' if @account.logo.attached? %>
       <%= @account.name %>
-    </div>
+    <% end %>
   <% end %>
 
   <%# auth %>
