--- a/app/views/accounts/account_users/edit.html.erb
+++ b/app/views/accounts/account_users/edit.html.erb
@@ -1,18 +1,20 @@
-<h1>
-  Edit
-  <%= @account_user.user.email %>
-  roles
-</h1>
+<div class="mx-auto md:w-2/3 w-full">
+  <h1 class="font-bold text-4xl">
+    Edit
+    <%= @account_user.user.email %>
+    roles
+  </h1>
 
-<%= form_with(model: [@account, @account_user]) do |form| %>
-  <div class="field">
-    <%= form.label :role %>
-    <%= form.select :role, AccountUser.roles, class: "form-input" %>
-  </div>
+  <%= form_with(model: [@account, @account_user], class: 'contents') do |form| %>
+    <div class="my-5">
+      <%= form.label :role %>
+      <%= form.select :role, AccountUser.roles, {}, class: "form-input" %>
+    </div>
 
-  <div class="actions">
-    <%= form.submit "Update Account User", class: "btn btn-primary" %>
-  </div>
-<% end %>
+    <div class="inline">
+      <%= form.submit "Update Account User", class: "btn btn-primary" %>
+    </div>
+  <% end %>
 
-<%= link_to 'Cancel', account_account_users_path(@account), class: "btn btn-secondary" %>
+  <%= link_to 'Cancel', account_account_users_path(@account), class: "btn btn-secondary" %>
+</div>
