--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="flex justify-between p-4 border-b">
+<nav class="flex justify-between p-4 border-b bg-white">
   <div>
     <%= active_link_to 'Home', root_path %>
     <% if signed_in? %>
