UI: clean up "back" links

--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -3,5 +3,5 @@
 
   <%= render "form", account: @account %>
 
-  <%= link_to "Back to accounts", accounts_path, class: "btn btn-secondary" %>
+  <%= link_to "Cancel", accounts_path, class: "btn btn-secondary" %>
 </div>
