--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -3,6 +3,5 @@
 
   <%= render "form", account: @account %>
 
-  <%= link_to "Show this account", @account, class: "btn btn-secondary" %>
-  <%= link_to "Back to accounts", accounts_path, class: "btn btn-secondary" %>
+  <%= link_to "Cancel", @account, class: "btn btn-secondary" %>
 </div>
