--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -6,7 +6,7 @@
 
   <p class="my-5">
     <strong class="block font-medium mb-1">Logo:</strong>
-    <%= image_tag account.logo, class: 'rounded-full size-10' if account.logo.attached? %>
+    <%= image_tag account.logo, class: "rounded-full size-10" if account.logo.attached? %>
   </p>
 
 </div>
