--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: account, class: "contents") do |form| %>
-  <%= render 'shared/errors', object: form.object %>
+  <%= render "shared/errors", object: form.object %>
 
   <div class="my-5">
     <%= form.label :name %>
