--- a/app/views/accounts/account_users/new.html.erb
+++ b/app/views/accounts/account_users/new.html.erb
@@ -4,11 +4,11 @@
   <%= form_with url: account_account_users_path, class: "contents" do |form| %>
     <div class="my-5">
       <%= form.label :email %>
-      <%= form.email_field :email, placeholder: 'Email', class: 'form-input' %>
+      <%= form.email_field :email, placeholder: "Email", class: "form-input" %>
     </div>
 
     <div class="inline">
-      <%= form.submit 'Invite', class: 'btn btn-primary' %>
+      <%= form.submit "Invite", class: "btn btn-primary" %>
     </div>
   <% end %>
 
