--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%= render 'layouts/head' %>
+    <%= render "layouts/head" %>
   </head>
 
   <body class="flex flex-col min-h-screen">
     <header class="sticky z-30 top-0">
-      <%= render 'shared/navbar' %>
+      <%= render "shared/navbar" %>
       <div id="flash" class="absolute flex flex-col z-40 left-1/2 transform -translate-x-1/2">
-        <%= render 'shared/flash' %>
+        <%= render "shared/flash" %>
       </div>
     </header>
     <main class="flex-grow p-4">
       <%= yield %>
     </main>
-    <%= render 'shared/footer' %>
+    <%= render "shared/footer" %>
   </body>
 </html>
