--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,12 +1,11 @@
 <% content_for :title, "Accounts" %>
-<div class="w-full">
-
+<div class="space-y-8">
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Accounts</h1>
     <%= link_to "New account", new_account_path, class: "btn btn-primary" %>
   </div>
 
-  <div id="accounts" class="min-w-full">
+  <div id="accounts" class="min-w-full space-y-4">
     <% @accounts.each do |account| %>
       <%= render account %>
     <% end %>
