--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,11 +1,11 @@
-<div class="mx-auto md:w-2/3 w-full flex">
-  <div class="mx-auto">
-    <%= render @account %>
+<div class="mx-auto md:w-2/3 w-full space-y-8">
+  <%= render @account %>
 
+  <div>
     <%= link_to "Account users", account_account_users_path(@account), class: "btn btn-secondary" %>
     <%= link_to "Edit this account", edit_account_path(@account), class: "btn btn-secondary" %>
     <div class="inline-block">
-      <%= button_to "Destroy this account", @account, method: :delete, class: "btn btn-danger" %>
+      <%= button_to "Destroy this account", @account, method: :delete, data: { turbo_confirm: "Are you sure?" }, class: "btn btn-danger" %>
     </div>
   </div>
 </div>
