--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
         <%= render "shared/flash" %>
       </div>
     </header>
-    <main class="flex-grow p-4">
+    <main class="flex-grow px-4 py-8">
       <%= yield %>
     </main>
     <%= render "shared/footer" %>
