account_users - basic css

--- a/app/views/accounts/account_users/_account_user.html.erb
+++ b/app/views/accounts/account_users/_account_user.html.erb
@@ -1,10 +1,10 @@
-<div id="<%= dom_id account_user %>">
-  <p class="my-5">
+<div id="<%= dom_id account_user %>" class="border p-4 rounded-lg">
+  <p>
     <strong class="block font-medium mb-1">User:</strong>
     <%= account_user.user.email %>
   </p>
 
-  <p class="my-5">
+  <p>
     <strong class="block font-medium mb-1">Role:</strong>
     <%= account_user.role %>
   </p>
