--- a/app/views/accounts/account_users/index.html.erb
+++ b/app/views/accounts/account_users/index.html.erb
@@ -1,12 +1,11 @@
 <% content_for :title, "Account users" %>
-<div class="w-full">
-
+<div class="space-y-8">
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Account users</h1>
     <%= link_to "New account user", new_account_account_user_path(@account), class: "btn btn-primary" %>
   </div>
 
-  <div id="account_users" class="min-w-full">
+  <div id="account_users" class="space-y-4">
     <% @account_users.each do |account_user| %>
       <%= render account_user %>
     <% end %>
