--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -5,7 +5,7 @@
     <%= link_to "New account", new_account_path, class: "btn btn-primary" %>
   </div>
 
-  <div id="accounts" class="min-w-full space-y-4">
+  <div id="accounts" class="space-y-4">
     <% @accounts.each do |account| %>
       <%= render account %>
     <% end %>
