--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -31,3 +31,7 @@
 .form-input {
   @apply block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full;
 }
+
+.nav-link {
+  @apply text-gray-500 hover:text-gray-900 font-semibold text-sm bg-transparent hover:bg-gray-100 px-2 py-1 rounded-md;
+}
