remove account_avatar_link
too deep of an abstraction

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -1,3 +1,4 @@
-<div class="border p-4 rounded-lg">
-  <%= account_avatar_link(account) %>
+<div class="border p-4 rounded-lg flex items-center gap-2">
+  <%= account_avatar(account) %>
+  <%= account.name %>
 </div>
