--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="p-4 text-center border-t">
   <div>
-    <%= active_link_to "Pricing", pricing_path, class: 'nav-link' %>
-    <%= active_link_to "Terms", terms_path, class: 'nav-link' %>
-    <%= active_link_to "Privacy", privacy_path, class: 'nav-link' %>
+    <%= active_link_to "Pricing", pricing_path, class: "nav-link" %>
+    <%= active_link_to "Terms", terms_path, class: "nav-link" %>
+    <%= active_link_to "Privacy", privacy_path, class: "nav-link" %>
   </div>
 
   <div>
