--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -1,4 +1,4 @@
-<div class="border p-4 rounded-lg flex items-center gap-2">
+<%= link_to account_path(account), class: "border p-4 rounded-lg flex items-center gap-2 hover:bg-gray-100" do %>
   <%= account_avatar(account) %>
   <%= account.name %>
-</div>
+<% end %>
