--- a/app/views/accounts/account_users/edit.html.erb
+++ b/app/views/accounts/account_users/edit.html.erb
@@ -1,10 +1,4 @@
-<div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">
-    Edit
-    <%= @account_user.user.email %>
-    roles
-  </h1>
-
+<%= render PageComponent.new(title: "Edit #{@account_user.user.email} roles") do |component| %>
   <%= form_with(model: [ @account, @account_user ], class: "contents") do |form| %>
     <div class="my-5">
       <%= form.label :role %>
@@ -24,4 +18,4 @@
   <% end %>
 
   <%= link_to "Cancel", account_account_users_path(@account), class: "btn btn-secondary" %>
-</div>
+<% end %>
