--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -1,7 +1,4 @@
-<div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing account</h1>
-
+<%= render PageComponent.new(title: "Editing account") do |component| %>
   <%= render "form", account: @account %>
-
   <%= link_to "Cancel", @account, class: "btn btn-secondary" %>
-</div>
+<% end %>
