--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -2,10 +2,10 @@
   <%= render @account %>
 
   <div>
-    <%= link_to "Account users", account_account_users_path(@account), class: "btn btn-secondary" %>
-    <%= link_to "Edit this account", edit_account_path(@account), class: "btn btn-secondary" if policy(@account).edit? %>
+    <%= link_to "Users", account_account_users_path(@account), class: "btn btn-secondary" %>
+    <%= link_to "Edit", edit_account_path(@account), class: "btn btn-secondary" if policy(@account).edit? %>
     <div class="inline-block">
-      <%= button_to "Destroy this account", @account, method: :delete, data: { turbo_confirm: "Are you sure?" }, class: "btn btn-danger" if policy(@account).destroy? %>
+      <%= button_to "Destroy", @account, method: :delete, data: { turbo_confirm: "Are you sure?" }, class: "btn btn-danger" if policy(@account).destroy? %>
     </div>
   </div>
 </div>
