--- a/app/components/page_component.html.erb
+++ b/app/components/page_component.html.erb
@@ -3,10 +3,10 @@
     <h1 class="font-bold text-4xl">
       <%= title %>
     </h1>
-    <%= action_list %>
+    <div class="whitespace-nowrap">
+      <%= action_list %>
+    </div>
   </div>
 
-  <div>
-    <%= content %>
-  </div>
+  <%= content %>
 </div>
