--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,11 +1,13 @@
-<div class="mx-auto md:w-2/3 w-full space-y-8">
-  <%= render @account %>
-
-  <div>
+<%= render PageComponent.new(title: @account.name) do |component| %>
+  <% component.with_action_list do %>
     <%= link_to "Users", account_account_users_path(@account), class: "btn btn-secondary" %>
     <%= link_to "Edit", edit_account_path(@account), class: "btn btn-secondary" if policy(@account).edit? %>
     <div class="inline-block">
       <%= button_to "Destroy", @account, method: :delete, data: { turbo_confirm: "Are you sure?" }, class: "btn btn-danger" if policy(@account).destroy? %>
     </div>
+  <% end %>
+
+  <div>
+    <%= render @account %>
   </div>
-</div>
+<% end %>
