--- a/app/views/inboxes/_inbox.html.erb
+++ b/app/views/inboxes/_inbox.html.erb
@@ -1,10 +1,10 @@
 <div id="<%= dom_id inbox %>">
-  <p class="my-5">
+  <p class="">
     <strong class="block font-medium mb-1">Name:</strong>
     <%= inbox.name %>
   </p>
 
-  <p class="my-5">
+  <p class="">
     <strong class="block font-medium mb-1">Account:</strong>
     <%= inbox.account_id %>
   </p>
