--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -1,4 +1,4 @@
-<%= render PageComponent.new(title: "Editing account") do |component| %>
+<%= render PageComponent.new(title: "Editing account", content_container: true) do |component| %>
   <%= render "form", account: @account %>
   <%= link_to "Cancel", @account, class: "btn btn-secondary" %>
 <% end %>
