--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,4 +1,4 @@
-<%= render PageComponent.new(title: "New account", content_container: true) do |component| %>
+<%= render PageComponent.new(title: "New account", content_container: true, full_width: false) do |component| %>
   <%= render "form", account: @account %>
   <%= link_to "Cancel", accounts_path, class: "btn btn-secondary" %>
 <% end %>
