--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -13,6 +13,6 @@
       <% end %>
     </div>
 
-    <%= inline_svg_tag 'svg/chevron-right.svg' %>
+    <%= inline_svg_tag "svg/chevron-right.svg" %>
   </div>
 <% end %>
