--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -1,4 +1,4 @@
-<%= link_to account_path(account), class: "border p-4 rounded-lg flex items-center justify-between gap-2 hover:bg-gray-100" do %>
+<%= link_to account_path(account, script_name: "/#{account.id}"), class: "border p-4 rounded-lg flex items-center justify-between gap-2 hover:bg-gray-100" do %>
   <div class="flex items-center gap-2">
     <%= account_avatar(account) %>
     <%= account.name %>
