--- a/app/components/page_component.html.erb
+++ b/app/components/page_component.html.erb
@@ -1,6 +1,6 @@
 <div class="space-y-8 mx-auto <%= width_class %>">
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">
+  <div class="flex gap-2 justify-between items-center">
+    <h1 class="font-bold text-4xl truncate">
       <%= title %>
     </h1>
     <div class="whitespace-nowrap">
