better padding on forms

--- a/app/components/page_component.html.erb
+++ b/app/components/page_component.html.erb
@@ -8,7 +8,7 @@
     </div>
   </div>
 
-  <div class="<%= conent_container_class %>">
+  <div class="<%= content_container_class %>">
     <%= content %>
   </div>
 </div>
