--- a/app/views/accounts/account_users/new.html.erb
+++ b/app/views/accounts/account_users/new.html.erb
@@ -1,5 +1,5 @@
 <%= render PageComponent.new(title: "Invite user", content_container: true, full_width: false) do |component| %>
-  <%= form_with model: @form, url: account_account_users_path(@account), class: "contents" do |form| %>
+  <%= form_with model: @form, url: account_account_users_path(@account), class: "contents space-y-4" do |form| %>
     <%= render "shared/errors", object: form.object %>
 
     <div class="">
