--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: account, class: "contents") do |form| %>
+<%= form_with(model: account, class: "contents space-y-4") do |form| %>
   <%= render "shared/errors", object: form.object %>
 
   <div class="">
