--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,24 @@
   </head>
 
   <body class="flex h-screen">
-    <aside class="hidden lg:flex flex-col justify-between bg-slate-400">
-      <div>
-        Widescreen sidebar top
-      </div>
-      <div>
-        Widescreen sidebar bottom
-      </div>
-    </aside>
+    <% if signed_in? %>
+      <aside class="hidden lg:flex flex-col justify-between bg-slate-400 min-w-48">
+        <%# Widescreen sidebar top %>
+        <div class="flex flex-col">
+          <%= link_to root_path, class: "p-4" do %>
+            <%#= image_tag 'logolong.png', alt: 'logo', class: 'h-10 w-auto' %>
+            <%= image_tag 'logo.png', alt: 'logo', class: 'h-10 w-auto' %>
+          <% end %>
+          <%= active_link_to "Home", root_path, active_classes: "bg-slate-100", class: "px-4 py-2 hover:bg-slate-300" %>
+          <%= active_link_to "Accounts", accounts_path, active_classes: "bg-slate-100", class: "px-4 py-2 hover:bg-slate-300" %>
+        </div>
+
+        <%# Widescreen sidebar bottom %>
+        <div class="p-4">
+        </div>
+      </aside>
+    <% end %>
+
     <div class="flex-grow overflow-y-auto flex flex-col">
       <header class="sticky z-30 top-0">
         <%= render "shared/navbar" %>
@@ -20,16 +30,14 @@
           <%= render "shared/flash" %>
         </div>
       </header>
-      <main class="flex-grow p-2">
+      <main class="flex-grow p-2 lg:p-4">
         <% 0.times do %>
           <div>abc</div>
         <% end %>
         <%= yield %>
       </main>
       <%= render "shared/footer" %>
-      <footer class="block lg:hidden sticky bottom-0 bg-rose-400">
-        Mobile footer content
-      </footer>
+      <%= render "shared/footer_nav" %>
     </div>
   </body>
 </html>
