--- a/app/views/shared/_footer_nav.html.erb
+++ b/app/views/shared/_footer_nav.html.erb
@@ -1,4 +1,4 @@
 <nav class="justify-around flex items-center lg:hidden sticky bottom-0 px-3 md:px-6 pt-2 pb-8 bg-slate-400">
-  <%= active_link_to "Home", root_path, active_classes: "bg-gray-100", class: "btn btn-secondary" %>
-  <%= active_link_to "Accounts", accounts_path, active_classes: "bg-gray-100", class: "btn btn-secondary" %>
+  <%= active_link_to "Home", root_path, active_classes: "bg-gray-100", class: "" %>
+  <%= active_link_to "Accounts", accounts_path, active_classes: "bg-gray-100", class: "" %>
 </nav>
