nest inboxes scaffold inside accounts

--- a/app/views/accounts/inboxes/new.html.erb
+++ b/app/views/accounts/inboxes/new.html.erb
@@ -3,5 +3,5 @@
 
   <%= render "form", inbox: @inbox %>
 
-  <%= link_to "Back to inboxes", inboxes_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%= link_to "Back to inboxes", [@account, :inboxes], class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
 </div>
