--- a/app/views/accounts/inboxes/index.html.erb
+++ b/app/views/accounts/inboxes/index.html.erb
@@ -7,14 +7,14 @@
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Inboxes</h1>
-    <%= link_to "New inbox", new_inbox_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <%= link_to "New inbox", new_account_inbox_path(@account), class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
   <div id="inboxes" class="min-w-full">
     <% @inboxes.each do |inbox| %>
       <%= render inbox %>
       <p>
-        <%= link_to "Show this inbox", inbox, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+        <%= link_to "Show this inbox", [@account, inbox], class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
       </p>
     <% end %>
   </div>
